--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
             </form>
             
             <p class="login-link">
-                Already have an account? <a href="index.html">Sign in</a>
+                Already have an account? <a href="login.html">Sign in</a>
             </p>
         </div>
     </div>
