--- a/login.html
+++ b/login.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Saving Money</title>
+
+    <form id="loginForm">
+        
+    </form>
 </head>
 <body>
     
