--- a/login.html
+++ b/login.html
@@ -7,6 +7,9 @@
 
     <form id="loginForm">
         <div class="form-group">
+
+            <h1>Login</h1>
+
             <label for="email">Email Address</label>
             <input type="email" id="email" name="email" required>
         </div>
@@ -26,6 +29,11 @@
         <button type="submit" class="login-btn">Login Account</button>
 
     </form>
+
+    <p class="signup-link">
+        Don't have an account? <a href="signup.html">Sign up</a>
+    </p>
+
 </head>
 <body>
     
