--- a/login.html
+++ b/login.html
@@ -26,7 +26,9 @@
             </label>
         </div>
 
-        <button type="submit" class="login-btn">Login Account</button>
+        <button type="submit" class="login-btn">Login Account
+            <a href="index.html"></a>
+        </button>
 
     </form>
 
