wait, fix macbook bug

--- a/login.html
+++ b/login.html
@@ -26,9 +26,7 @@
             </label>
         </div>
 
-        <button type="submit" class="login-btn">Login Account
-            <a href="index.html"></a>
-        </button>
+        <button type="submit" class="login-btn">Login Account</button>
 
     </form>
 
